--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@vue/component-compiler-utils": "^2.0.0",
     "less": "^3.0.4",
+    "lodash": "^4.17.10",
     "typescript": "^2.9.2",
     "vue": "^2.5.16",
     "vue-hot-reload-api": "^2.3.0",
@@ -22,7 +23,11 @@
   },
   "devDependencies": {
     "@types/node": "^10.3.4",
+    "chai": "^4.1.2",
     "cypress": "^3.0.1",
+    "jsdom": "11.11.0",
+    "jsdom-global": "3.0.2",
+    "mocha": "^5.2.0",
     "vue-template-compiler": "^2.5.16"
   }
 }
